After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 691651 - Fix a typo in CLUTTER_STAGE_STATE document
Fix a typo in CLUTTER_STAGE_STATE document
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: Documentation
git master
Other Linux
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2013-01-13 12:10 UTC by Kouhei Sutou
Modified: 2013-01-16 22:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix a typo (916 bytes, patch)
2013-01-13 12:10 UTC, Kouhei Sutou
committed Details | Review

Description Kouhei Sutou 2013-01-13 12:10:22 UTC
Created attachment 233375 [details] [review]
Fix a typo

I found a typo in CLUTTER_STAGE_STATE document. "stage" should be "state".
Comment 1 Emmanuele Bassi (:ebassi) 2013-01-16 22:58:46 UTC
thanks for the patch; pushed to the master and clutter-1.14 branches.