Fix a typo in ClutterEventType documentation

https://bugzilla.gnome.org/show_bug.cgi?id=691651